--- a/app/admin/templates/dashboard/offer_form.html
+++ b/app/admin/templates/dashboard/offer_form.html
@@ -19,16 +19,17 @@
                         >
                     </div>
                     <div class="col-md-3">
-                        <label class="form-label" for="discount_percent">Discount (%)</label>
+                        <label class="form-label" for="base_discount">Base Discount (%)</label>
                         <input
                             class="form-control"
-                            id="discount_percent"
-                            name="discount_percent"
+                            id="base_discount"
+                            name="base_discount"
                             type="number"
                             step="0.01"
                             min="0"
                             required
-                            value="{{ offer.discount_percent if offer else '' }}"
+                            {# Persist the minimum discount configured for the offer. #}
+                            value="{{ offer.base_discount if offer else '' }}"
                         >
                     </div>
                     <div class="col-md-3">
